# pred-mkts

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  rules.md
.cursor/: config.json
.github/: pull_request_template.md
.github/workflows/: status-sync.yml
config/: limits.yml
docs/delivery/: _state.md  backlog.md  product-prd.md  registry.yml
docs/delivery/0/: 0-1.md  0-2.md  0-3.md  0-4.md  0-5.md  0-6.md  prd.md  tasks.md
docs/delivery/1/: 1-1.md  1-10.md  1-2.md  1-3.md  1-4.md  1-5.md  1-6.md  1-7.md  1-8.md  1-9.md  prd.md  tasks.md
docs/technical/: polymarket-runbook.md  rate-limit-runbook.md
scripts/: bootstrap.sh  context-pack.sh
src/pred_mkts/: __init__.py
src/pred_mkts/core/: __init__.py  config.py  datasource.py  rate_limiter.py  telemetry.py
src/pred_mkts/datasources/: __init__.py  polymarket.py
tests/: __init__.py
tests/e2e/: __init__.py  test_pbi0_e2e.py
tests/integration/: __init__.py  stub_server.py  test_rate_limiter.py
tests/unit/: __init__.py  test_config.py  test_datasource_interface.py  test_polymarket_stub.py  test_rate_limiter.py  test_telemetry.py
tools/: commit_msg_check.py  update_registry.py  update_state.py
