
[project]
name = "pred-mkts"
version = "0.1.0"
description = "Prediction Markets"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]

[tool.uv]
# uv respects requires-python; venv will be .venv/

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyyaml>=6.0.3",
]
