
[project]
name = "pred-mkts"
version = "0.1.0"
description = "Prediction Markets"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# uv respects requires-python; venv will be .venv/

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyyaml>=6.0.3",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "aiohttp>=3.10.0",
]
